--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@kinde-oss/react-native-sdk-0-7x": "^1.3.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@supabase/supabase-js": "^2.42.4",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~50.0.14",
     "expo-constants": "~15.4.6",
+    "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
